TRYING to fix BG issue on mobile

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -47,7 +47,11 @@
   vertical-align: middle;
   margin: 0 auto;
   text-align: left;
-  z-index: 1045; }
+  z-index: 1045;
+  /*TRYNG TO FIX SCROLLING BG ISSUE ON MOBILE*/
+  max-height: 100%;
+  overflow-y: scroll;
+}
 
 .mfp-inline-holder .mfp-content,
 .mfp-ajax-holder .mfp-content {
